cluster/overlays/zahariev.com/invval/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invval
  namespace: invval
spec:
  template:
    spec:
      containers:
      - name: invval
