cluster/overlays/zahariev.com/invval/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invval
  namespace: invval
spec:
  rules:
  - host: invval.zahariev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: invval
            port:
              number: 8080
  tls:
  - hosts:
    - invval.zahariev.com
    secretName: invval-tls
